--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.8)
+# FILE(COPY ...) requires 2.8
 project (azouk-libraries)
 
 # The version number.
@@ -6,7 +7,7 @@ set (PROGRAM_VERSION 1.0.0)
 
 #set (CMAKE_CXX_FLAGS "-Wall -Wextra")
 set (CMAKE_CXX_FLAGS
-"-Wall -Wnon-virtual-dtor -Winit-self -Wswitch-enum -Wunused -Wunused-parameter")
+  "-Wall -Wnon-virtual-dtor -Winit-self -Wswitch-enum -Wunused -Wunused-parameter -O3")
 
 # add the binary tree to the search path for include files
 # so that we will find config.h
@@ -19,8 +20,6 @@ find_program (PROTOC protoc)
 # used for the version file
 find_program (SHA1SUM sha1sum)
 find_program (AWK awk)
-find_program (CUT cut)
-
 
 
 include (CheckIncludeFiles)
@@ -33,7 +32,6 @@ check_include_files (unistd.h HAVE_UNISTD_H)
 
 
 find_library (PTHREAD_LIB pthread DOC "thread library" REQUIRED)
-find_library (PROTOC_LIB protoc REQUIRED)
 find_library (PROTOBUF_LIB protobuf REQUIRED)
 
 set (LIBS ${PTHREAD_LIB} ${PROTOC_LIB} ${PROTOBUF_LIB})
@@ -46,27 +44,33 @@ include_directories (${Boost_INCLUDE_DIRS})
 
 # set (Boost_USE_STATIC_LIBS   OFF)
 set (Boost_USE_MULTITHREADED ON)
-find_package (Boost 1.35.0 COMPONENTS program_options signals system REQUIRED)
+find_package (Boost 1.35.0
+  COMPONENTS program_options signals system REQUIRED)
 
-list(APPEND LIBS ${Boost_LIBRARIES})
+list (APPEND LIBS ${Boost_LIBRARIES})
 
+find_package (Boost 1.35.0
+  COMPONENTS python REQUIRED)
+find_package (PythonLibs REQUIRED)
 
+set (PYTHON_LIBS ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
+include_directories (${PYTHON_INCLUDE_DIRS})
 
-set(common_sources
+set(proto_generated_sources
+  ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.cc
+  ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.h
   ${CMAKE_BINARY_DIR}/azlib/logging/Logging.pb.cc
   ${CMAKE_BINARY_DIR}/azlib/logging/Logging.pb.h
+)
+
+set(common_sources
+  src/azlib/util/Assert.cc src/azlib/util/Assert.h
+  src/azlib/util/Exception.cc src/azlib/util/Exception.h
   src/azlib/signals.cc src/azlib/signals.h
   src/azlib/random.cc src/azlib/random.h
   src/azlib/logging.cc src/azlib/logging.h
-  src/azlib/util/Assert.cc src/azlib/util/Assert.h
-  src/azlib/util/Exception.cc src/azlib/util/Exception.h
   src/azouk/util/kwargs.cc src/azouk/util/kwargs.h
   src/azouk/xrelease.cc src/azouk/xrelease.h
-  )
-
-set(multiplexer_sources
-  ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.cc
-  ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.h
   )
 
 set(mxcontrol_sources
@@ -83,6 +87,9 @@ set(mxcontrol_sources
   # src/mxcontrol-commands/ReceiveLogs.h
   src/mxcontrol-commands/Help.cc
   src/mxcontrol-commands/Help.h
+)
+
+set(multiplexer_sources
   src/multiplexer/BasicClient.cc
   src/multiplexer/BasicClient.h
   src/multiplexer/Client.cc
@@ -98,7 +105,6 @@ set(mxcontrol_sources
   ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer.constants.h
   )
 
-
 include (CheckFunctionExists)
 check_function_exists (gethostname HAVE_GETHOSTNAME)
 
@@ -108,54 +114,52 @@ endif ()
 
 set (PROTOC_FLAGS "")
 
-add_custom_command (
-  OUTPUT ${CMAKE_BINARY_DIR}/azlib/logging/Logging.pb.cc
-         ${CMAKE_BINARY_DIR}/azlib/logging/Logging.pb.h
-  DEPENDS src/azlib/logging/Logging.proto
-  COMMAND ${PROTOC} ${PROTOC_FLAGS}
-          ${CMAKE_SOURCE_DIR}/src/azlib/logging/Logging.proto
-          -I${CMAKE_CURRENT_SOURCE_DIR}/src
-          --cpp_out=${CMAKE_BINARY_DIR}
-)
-
-add_custom_command (
-  OUTPUT ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.cc
-         ${CMAKE_BINARY_DIR}/multiplexer/Multiplexer.pb.h
-  DEPENDS src/multiplexer/Multiplexer.proto
-  COMMAND ${PROTOC} ${PROTOC_FLAGS}
-          ${CMAKE_SOURCE_DIR}/src/multiplexer/Multiplexer.proto
-          -I${CMAKE_CURRENT_SOURCE_DIR}/src
-          --cpp_out=${CMAKE_BINARY_DIR}
-)
+foreach (srcpath "azlib/logging/Logging" "multiplexer/Multiplexer")
+  add_custom_command (
+    OUTPUT ${CMAKE_BINARY_DIR}/${srcpath}.pb.cc
+           ${CMAKE_BINARY_DIR}/${srcpath}.pb.h
+    DEPENDS src/${srcpath}.proto
+    COMMAND ${PROTOC} ${PROTOC_FLAGS}
+            ${CMAKE_SOURCE_DIR}/src/${srcpath}.proto
+            -I${CMAKE_CURRENT_SOURCE_DIR}/src
+            --cpp_out=${CMAKE_BINARY_DIR}
+    )
+endforeach ()
 
 add_executable(mxcontrol
-  ${common_sources} ${mxcontrol_sources} ${multiplexer_sources})
+  ${common_sources}
+  ${mxcontrol_sources}
+  ${multiplexer_sources}
+  ${proto_generated_sources}
+  )
 target_link_libraries(mxcontrol ${LIBS})
+
+add_executable(server
+  src/server.cc
+  ${common_sources}
+  ${proto_generated_sources}
+  )
+target_link_libraries(server ${LIBS})
 
 add_executable(generate_constants
   src/generate_constants.cc
-  ${common_sources}
-  ${multiplexer_sources}
+  ${proto_generated_sources}
+  src/azlib/util/Exception.cc
+  src/azlib/util/Exception.h
+  src/azlib/util/Assert.cc
+  src/azlib/util/Assert.h
   )
 target_link_libraries(generate_constants ${LIBS})
 
-add_custom_command (
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer.constants.h
-  DEPENDS generate_constants src/multiplexer.rules
-  COMMAND generate_constants ${CMAKE_SOURCE_DIR}/src/multiplexer.rules
-         ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer.constants.h
-  COMMAND generate_constants ${CMAKE_SOURCE_DIR}/src/multiplexer.rules
-         ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer_constants.py
-  )
 
-add_custom_command (
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer_constants.py
-  DEPENDS generate_constants src/multiplexer.rules
-  COMMAND generate_constants ${CMAKE_SOURCE_DIR}/src/multiplexer.rules
-         ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer_constants.py
-  )
-
-
+foreach (ext "h" "py")
+  add_custom_command (
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer.constants.${ext}
+    DEPENDS generate_constants src/multiplexer.rules
+    COMMAND generate_constants ${CMAKE_SOURCE_DIR}/src/multiplexer.rules
+           ${CMAKE_CURRENT_BINARY_DIR}/multiplexer/multiplexer.constants.${ext}
+    )
+endforeach ()
 
 execute_process (
   COMMAND ${SHA1SUM}
@@ -177,6 +181,31 @@ execute_process (
   )
 
 configure_file (
-  ${PROJECT_SOURCE_DIR}/src/azouk/logging/type_id_constants.h.in
-  ${PROJECT_BINARY_DIR}/azouk/logging/type_id_constants.h
-)
+  src/azouk/logging/type_id_constants.h.in
+  azouk/logging/type_id_constants.h
+  )
+
+configure_file(
+  src/logging.type_id.constants.txt
+  azouk/logging/type_id_constants.py COPYONLY
+  )
+
+file(INSTALL src/ DESTINATION .
+  FILES_MATCHING PATTERN "*.py")
+
+add_library(multiplexer/_mxclient MODULE 
+  src/multiplexer/_mxclientmodule.cc
+  ${multiplexer_sources}
+  ${common_sources}
+  ${proto_generated_sources}
+  )
+target_link_libraries(multiplexer/_mxclient ${LIBS} ${PYTHON_LIBS})
+set_target_properties(multiplexer/_mxclient PROPERTIES PREFIX "")
+
+add_library(azouk/_logging MODULE 
+  src/azouk/_loggingmodule.cc
+  ${common_sources}
+  ${proto_generated_sources}
+  )
+target_link_libraries(azouk/_logging ${LIBS} ${PYTHON_LIBS})
+set_target_properties(azouk/_logging PROPERTIES PREFIX "")
