--- a/debian/control
+++ b/debian/control
@@ -32,3 +32,26 @@ Description: multiplexer sources ready for compilation
  .
  Run /usr/share/multiplexer/configure --help to see available
  options (RULES is the most important setting).
+
+Package: multiplexer-openbci
+Architecture: amd64 i386
+Depends: ${misc:Depends}
+Build-Depends:
+      build-essential,
+      automake,
+      libboost-dev,
+      libboost-date-time-dev,
+      libboost-filesystem-dev,
+      libboost-program-options-dev,
+      libboost-signals-dev,
+      libboost-system-dev,
+      libboost-python-dev,
+      python-dev, python,
+      protobuf-compiler (>= 2.4.1),
+      libprotobuf-dev (>= 2.4.1)
+Description: multiplexer compiled for multiplexer.rules used with OpenBCI
+ Multiplexer is used to pass messages around.
+ .
+ Multiplexer binary depends on the multiplexer.rules file, which is
+ supposed to be modified by the user. This version is compiled for
+ a specific version of this file, used with OpenBCI.
