Fixes after checking with pbuilder

--- a/debian/rules
+++ b/debian/rules
@@ -9,14 +9,15 @@ export DH_VERBOSE=1
 
 override_dh_auto_configure:
 	./bootstrap.sh
-	mkdir -p build
-	cd build && ../configure --prefix=/usr RULES=../debian/obci_configs/multiplexer.rules
+	mkdir -p debian/build
+	cd debian/build && \
+	   ../../configure --prefix=/usr RULES=../../debian/obci_configs/multiplexer.rules
 
 override_dh_auto_build:
-	make -C build
+	make -C debian/build
 
 override_dh_install:
-	make -C build install DESTDIR=$(PWD)/debian/tmp
+	make -C debian/build install DESTDIR=$(PWD)/debian/tmp
 	dh_install
 	find debian/multiplexer-source -name .gitignore -print -delete , \
                                        -name '*~' -print -delete
