Split multiplexer deb into lib, dev, py and bin parts

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -1,7 +1,9 @@
 /files
 /*.debhelper.log
 /*.substvars
-/multiplexer-*/
+/multiplexer-source/
+/openbci-*multiplexer*/
 /multiplexer-*.*.debhelper
+/openbci-*multiplexer*.*.debhelper
 /tmp/
 /build/
