--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Build-Depends: debhelper (>= 8.0.0),
       libprotobuf-dev (>= 2.4.1),
       chrpath
 Standards-Version: 3.9.3
-Vcs-Git: git://escher.fuw.edu.pl/git/azouk-libraries
-Vcs-Browser: http://escher.fuw.edu.pl/git/azouk-libraries
+Vcs-Git: git://git.braintech.pl/azouk-libraries.git
+Vcs-Browser: http://git.braintech.pl/azouk-libraries.git
 
 Package: multiplexer-source
 Architecture: all
