Further porting to boost::signals2

--- a/configure.ac
+++ b/configure.ac
@@ -61,10 +61,10 @@ BOOST_NUMERIC_CONVERSION
 BOOST_PREPROCESSOR
 BOOST_UTILITY
 BOOST_FOREACH
+BOOST_SIGNALS2
 
 # boost libfull headers
 BOOST_PROGRAM_OPTIONS
-BOOST_SIGNALS
 BOOST_SYSTEM
 BOOST_DATE_TIME
 BOOST_FILESYSTEM
